fix: Java 17 compat + trim smoke test matrix
- Replace List.getFirst() (Java 21) with get(0) in AfkTimeManagerTest —
  getFirst() was added in Java 21 via SequencedCollection; our compile
  target is Java 17, so it fails test-compilation on Java 17 JDK.

- Simplify smoke test matrix from 18 jobs to 9:
    Spigot 1.21.4  × Java [17, 21, 25]   (3 jobs)
    Paper  1.21.11 × Java [17, 21, 25]   (3 jobs)
    Folia  1.21.11 × Java [17, 21, 25]   (3 jobs)
  Each job builds the plugin JAR with matrix.java; when matrix.java < 21
  a second setup-java step upgrades to Java 21 before starting the
  server (MC 1.21.x requires Java 21 at runtime).